# libgit2

./: CMakeLists.txt
examples/: packtest.c
include/git2/: odb_backend.h  pack.h
packtest/: CMakeLists.txt  packtest.c
src/: CMakeLists.txt  global.c  global.h  indexer.c  mwindow.c  mwindow.h  object_export.c  odb_pack.c  pack-bitmap-write.c  pack-bitmap.c  pack-bitmap.h  pack-objects.h  pack.c  pack.h
src/ewah/: bitmap.c  ewah_bitmap.c  ewah_io.c  ewah_rlw.c
src/win32/: thread.h
