LINK_DIRECTORIES(${LIBGIT2_LIBDIRS})
INCLUDE_DIRECTORIES(${LIBGIT2_INCLUDES})

FILE(GLOB SRC_EXAMPLE_APPS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
FOREACH(src_app ${SRC_EXAMPLE_APPS})
	STRING(REPLACE ".c" "" app_name ${src_app})
	ADD_EXECUTABLE(${app_name} ${src_app})
	TARGET_LINK_LIBRARIES(${app_name} git2)
ENDFOREACH()
